Converted SearchResult and SearchResults to records.